     ambiguities (#223)
   - Allow arbitrary number of repetitions for mixed model analysis
     with a spin control (#222)
   - Setting the treatment to "None" for (g)lmm analysis did not
     exclude it from the analysis, but introduced it as a different
     treatment (#224)
   - Channel width not correctly identified for old tdms files
     (dclab 0.6.2.dev7)
 - Automatically identify treatment and repetition for mixed model
   analysis (#222)
 - Automated release to PyPI with appveyor
 - Begin migration of docs to sphinx/readthedocs.org
0.8.6
 - Refactoring:
   - Use pathlib instead of os.path for
     - All session handling/conversion tasks
     - Configuration file management
     - Measurement/Analysis management
   - Support all changes to dclab.definitions (dclab 0.4.0)
   - Support all changes to dclab.features (dclab 0.5.0)
 - Bugfixes:
   - Opening sessions containing paths to data with a hash "#" failed
   - AttributeError during autosave when no measurement data is available
   - Exporting to .fcs files failed due to NaN-valued events; Events
     containing NaN values are now ignored (fcswrite 0.1.3.dev22) (#215)
   - Improve displayed float values for selected configuration keys (#216)
   - Unicode error when searching for data sets on disk (#218)
   - Unicode error when performing LMM analysis on some setups (#217)
   - IndexError when obtaining meta data from previous, broken analysis
   - KeyError when starting a new analysis with unavailable plotting axes
   - Ignore broken .rtdc data files
0.8.5
 - Update plotting range when switching to log scale (#198)
 - Allow to fix plotting range to retain previous behavior (#198)
 - Initial plotting range is determined from min/max values of all plots (#213)
 - Improved standard contour and kde accuracies using Doane's formula (#147)
 - Bugfixes:
   - Support opening tdms files with capitalized "userDef" column names
     (dclab dclab 0.3.2.dev5) (#212)